# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/HelloTriangle/: main.cpp
src/HelloTriangle/Exercises/Exercise3/: main.cpp
src/HelloTriangle_Tutorial/: LEARNING.md  glad.c  main.cpp
src/HelloTriangle_Tutorial/Exercises/Exercise1/: main.cpp
src/HelloTriangle_Tutorial/Exercises/Exercise2/: main.cpp
src/Shaders/: fragment.fs  vertex.vs
src/Shaders_Tutorial/: LEARNING.md  main.cpp  shader.cpp  shader.h
src/Shaders_Tutorial/Exercises/Exercise1/: main.cpp  upside_down.vs
src/Shaders_Tutorial/Exercises/Exercise2/: horiz_offset.vs  main.cpp
src/Shaders_Tutorial/Exercises/Exercise3/: main.cpp  new_fragment.fs  new_vertex.vs
